--- a/package.json
+++ b/package.json
@@ -548,6 +548,7 @@
     "queue-microtask": "^1.2.3",
     "range-parser": "^1.2.1",
     "raw-body": "^2.4.2",
+    "react-lottie": "^1.2.3",
     "read-pkg": "^1.1.0",
     "read-pkg-up": "^1.0.1",
     "readable-stream": "^2.3.7",
